--- a/source/wp-content/themes/wporg-news-2021/sass/blocks/_post-content.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/blocks/_post-content.scss
@@ -11,7 +11,7 @@
 			margin-left: auto !important;
 		}
 		&.alignfull {
-			margin-left: 0 !important;
+			margin-left: inherit !important;
 		}
 	}
 }
